# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//build/ohos.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

module_output_path = "graphic_3d/graphic_3d/3d_scene_adapter"

ohos_unittest("SceneAdapterUnitTest") {
  module_out_path = module_output_path
  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "scene_adapter_unit_test.cpp" ]

  defines = [
    "CORE_HAS_GLES_BACKEND=1",
    "CORE_HAS_VULKAN_BACKEND=1",
  ]

  defines += [ "LIB_ENGINE_CORE=${LIB_ENGINE_CORE}.z" ]

  if (target_cpu == "arm") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib/graphics3d",
      "PLATFORM_APP_ROOT_PATH=/system/lib/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib/graphics3d",
    ]
  }

  if (target_cpu == "arm64") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib64/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib64/graphics3d/",
      "PLATFORM_APP_ROOT_PATH=/system/lib64/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib64/graphics3d/",
    ]
  }

  configs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter:lume3d_config",
    "//foundation/graphic/graphic_3d/3d_scene_adapter:scene_adapter_config",
    "//foundation/graphic/graphic_3d/3d_widget_adapter:widget_adapter_config",
  ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter"
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "ability_runtime:napi_common",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest",
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_2d:librender_service_base",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "input:libmmi-client",
    "napi:ace_napi",
    "vulkan-headers:vulkan_headers",
  ]
  
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("AGPOffscreenRenderUnitTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos",
    "//foundation/graphic/graphic_3d/3d_scene_adapter/src",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "offscreen_render_unit_test.cpp",
    "//foundation/graphic/graphic_3d/3d_scene_adapter/src/offscreen_scene.cpp"
  ]

  defines = [
    "CORE_HAS_GLES_BACKEND=1",
    "CORE_HAS_VULKAN_BACKEND=1",
  ]

  defines += [
    "LIB_ENGINE_CORE=${LIB_ENGINE_CORE}.z",
    "private=public",
    "protected=public"
  ]

  if (target_cpu == "arm") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib/graphics3d",
      "PLATFORM_APP_ROOT_PATH=/system/lib/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib/graphics3d",
    ]
  }

  if (target_cpu == "arm64") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib64/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib64/graphics3d/",
      "PLATFORM_APP_ROOT_PATH=/system/lib64/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib64/graphics3d/",
    ]
  }

  configs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter:lume3d_config",
    "//foundation/graphic/graphic_3d/3d_scene_adapter:scene_adapter_config",
    "//foundation/graphic/graphic_3d/3d_widget_adapter:widget_adapter_config",
  ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter",
    "//foundation/graphic/graphic_3d/lume/LumeScene:AGPSceneApi"
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "ability_runtime:napi_common",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest",
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_2d:librender_service_base",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "input:libmmi-client",
    "napi:ace_napi",
    "vulkan-headers:vulkan_headers",
  ]
  
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("SceneBridgeAniUnitTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "//foundation/graphic/graphic_3d/3d_scene_adapter/src",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos",
  ]

  sources = [ "scene_bridge_ani_unit_test.cpp" ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter",
    "//foundation/graphic/graphic_3d/lume/LumeScene:AGPSceneApi"
  ]

  external_deps = [
    "hilog:libhilog",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]
  
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("SceneBridgeUnitTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "//foundation/graphic/graphic_3d/3d_scene_adapter/src",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos",
  ]

  sources = [ "scene_bridge_unit_test.cpp" ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter",
    "//foundation/graphic/graphic_3d/lume/LumeScene:AGPSceneApi"
  ]

  external_deps = [
    "hilog:libhilog",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]
  
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

# Options
RENDER_BUILD_GLES = true
RENDER_BUILD_VULKAN = true

config("surface_stream_test_config") {

  # Only targets in the current buildfile ("private")
  visibility = [":*"]
  
  # Required flags
  cflags = [
    "-Wno-overloaded-virtual",
  ]

  # Unit test defines
  defines = [
    "OHOS_PLATFORM_ASSETS_PATH=\"/data/test/resource/graphic_3d/LumeScene/test_data/\"",
  ]

  if (target_cpu == "arm" || target_cpu == "x86") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=\"/system/lib/\"",
      "PLATFORM_CORE_PLUGIN_PATH=\"/system/lib/graphics3d\"",
      "PLATFORM_APP_ROOT_PATH=\"/system/lib/\"",
      "PLATFORM_APP_PLUGIN_PATH=\"/system/lib/graphics3d\"",
    ]
  }

  if (target_cpu == "arm64" || target_cpu == "x64") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=\"/system/lib64/\"",
      "PLATFORM_CORE_PLUGIN_PATH=\"/system/lib64/graphics3d/\"",
      "PLATFORM_APP_ROOT_PATH=\"/system/lib64/\"",
      "PLATFORM_APP_PLUGIN_PATH=\"/system/lib64/graphics3d/\"",
    ]
  }

  if (RENDER_BUILD_GLES) {
    defines += [
      "RENDER_HAS_GLES_BACKEND=1"
    ]
  }

  if (RENDER_BUILD_VULKAN) {
    defines += [
      "RENDER_HAS_VULKAN_BACKEND=1"
    ]
  }

  defines += [
    "CORE_DYNAMIC=1"
  ]
}

ohos_unittest("SurfaceStreamUnitTest") {
  module_out_path = module_output_path

  cflags = [
    "-Wno-unused-function",
    "-Wno-unused-static-function",
  ]

  cflags_cc = [
    "-Wno-unused-function",
    "-Wno-unused-static-function",
  ]

  configs = [
    "${LUME_BASE_PATH}:lume_base_api_config",
    "${LUME_CORE_PATH}:lume_engine_api",
    "${LUME_ECS_HELPER_PATH}:lume_engine_ecshelper_config",
    "${LUME_META_PATH}:lume_meta_api_config",
    "${LUME_RENDER_PATH}:lume_render_api",
    "${LUME_SCENE_PATH}:lume_scene_api_config",
    "${LUME_PNG_PATH}:lume_png_api",
    "${LUME_JPG_PATH}:lume_jpg_api",
    "${LUME_CORE3D_PATH}:lume_3d_api",
    ":surface_stream_test_config"
  ]

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "${LUME_BASE_PATH}/api",
    "${LUME_CORE_PATH}/api",
    "${LUME_RENDER_PATH}/api",
    "${LUME_CORE3D_PATH}/api",
    "${LUME_META_PATH}/include",
    "${LUME_SCENE_PATH}/include",
    "${LUME_SCENE_PATH}/test/unittest/api_unit_test/src",
    "${LUME_SCENE_PATH}/test/unittest/common",
  ]

  sources = [
    "${LUME_SCENE_PATH}/test/unittest/common/load_lib.cpp",
    "surface_stream_unit_test.cpp"
  ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter",
    "${LUME_ECS_HELPER_PATH}:libAGPEcshelper", # no shared lib!
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gmock",
    "googletest:gtest",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "graphic_2d:libnative_image", # Handle HOS window
    "hilog:libhilog",
  ]

  if (RENDER_BUILD_GLES) {
    external_deps += [
      "graphic_2d:EGL",
      "graphic_2d:GLESv3"
    ]
  }

  if (RENDER_BUILD_VULKAN) {
    external_deps += [
      "vulkan-headers:vulkan_headers",
      "vulkan-loader:vulkan_loader",
    ]
  }

  # Test data
  resource_config_file = "//foundation/graphic/graphic_3d/lume/LumeScene/test/unittest/assets/ohos_test.xml"

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

group("unittest") {
  testonly = true
  deps = [
    ":SceneAdapterUnitTest",
    ":AGPOffscreenRenderUnitTest",
    ":SceneBridgeAniUnitTest",
    ":SceneBridgeUnitTest",
    ":SurfaceStreamUnitTest"
  ]
}