# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

module_output_path = "graphic_3d/3d_widget_adapter_test"

ohos_unittest("3d_widget_adpater_test") {
  module_out_path = module_output_path

  sources = [ "3d_widget_adapter_test.cpp" ]

  include_dirs = [
    "${ace_root}",
    "${ace_root}/frameworks",
  ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:widget_adapter_source",
  ]

  external_deps = [
    "ace_engine:libace",
    "graphic_2d:libgl",
    "hilog:libhilog",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

group("unittest") {
  testonly = true

  deps = [ ":3d_widget_adpater_test" ]
}
