# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

import("//build/ohos.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

module_output_path = "graphic_3d/graphic_3d/3d_widget_adapter_test"

ohos_unittest("3d_widget_adpater_test") {
  module_out_path = module_output_path

  sources = [ "3d_widget_adapter_test.cpp" ]

  include_dirs = []

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]
  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "hilog:libhilog",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("GraphicsManagerUnitTest") {
  module_out_path = module_output_path

  sources = [ "graphics_manager_unit_test.cpp" ]

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]

  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "hilog:libhilog",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("EngineFactoryTest") {
  module_out_path = module_output_path

  sources = [ "engine_factory_test.cpp" ]

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]

  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
  ]

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos"
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("TextureLayerUnitTest") {
  module_out_path = module_output_path

  sources = [ "texture_layer_unit_test.cpp" ]

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]

  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

group("unittest") {
  testonly = true

  deps = [
    ":3d_widget_adpater_test",
    ":EngineFactoryTest",
    ":GraphicsManagerUnitTest",
    ":TextureLayerUnitTest",
  ]
}
