# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#Options
RENDER_BUILD_GLES = true
RENDER_BUILD_VULKAN = true

import("//build/test.gni")

import("//build/ohos.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

module_output_path = "graphic_3d/graphic_3d/3d_widget_adapter_test"

ohos_unittest("3d_widget_adpater_test") {
  module_out_path = module_output_path

  sources = [ "3d_widget_adapter_test.cpp" ]

  include_dirs = []

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]
  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "hilog:libhilog",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("GraphicsManagerUnitTest") {
  module_out_path = module_output_path

  sources = [ "graphics_manager_unit_test.cpp" ]

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]

  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "hilog:libhilog",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("EngineFactoryTest") {
  module_out_path = module_output_path

  sources = [ "engine_factory_test.cpp" ]

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]

  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
  ]

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos"
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("TextureLayerUnitTest") {
  module_out_path = module_output_path

  sources = [ "texture_layer_unit_test.cpp" ]

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]

  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("ShaderInputBufferUnitTest") {
  module_out_path = module_output_path

  sources = [ "shader_input_buffer_unit_test.cpp" ]

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]

  external_deps = [
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "hilog:libhilog",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("LumeCustomRenderUnitTest") {
  module_out_path = module_output_path

  sources = [ "lume_custom_render_unit_test.cpp" ]

  deps = [ "${LUME_ROOT}/../3d_widget_adapter:widget_adapter_source" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_surface:surface",
    "hilog:libhilog",
  ]

  include_dirs =[
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include/lume",
    "${LUME_BASE_PATH}/api",
    "${LUME_CORE_PATH}/api",
    "${LUME_CORE_PATH}/api/platform/ohos",
    "${LUME_CORE3D_PATH}/api",
    "${LUME_RENDER_PATH}/api",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "USE_ACE_SKIA",
    "CORE_DYNAMIC=1",
  ]

  if (target_cpu == "arm64" || target_cpu == "x64") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib64/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib64/graphics3d/",
      "PLATFORM_APP_ROOT_PATH=/system/lib64/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib64/graphics3d/",
    ]
  } else {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib/graphics3d/",
      "PLATFORM_APP_ROOT_PATH=/system/lib/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib/graphics3d/",
    ]
  }

  if (RENDER_BUILD_VULKAN) {
    defines += [
      "RENDER_HAS_VULKAN_BACKEND=1"
    ]
  }

  if (RENDER_BUILD_GLES) {
    defines += [
      "RENDER_HAS_GLES_BACKEND=1"
    ]
  }

  if (RENDER_BUILD_GLES) {
    external_deps += [
      "graphic_2d:EGL",
      "graphic_2d:GLESv3"
    ]
  }

  if (RENDER_BUILD_VULKAN) {
    external_deps += [
      "vulkan-headers:vulkan_headers",
      "vulkan-loader:vulkan_loader",
    ]
  }

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

group("unittest") {
  testonly = true

  deps = [
    ":3d_widget_adpater_test",
    ":EngineFactoryTest",
    ":GraphicsManagerUnitTest",
    ":LumeCustomRenderUnitTest",
    ":ShaderInputBufferUnitTest",
    ":TextureLayerUnitTest",
  ]
}
