# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Declarations
import("//build/ohos.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

# LumeBaseAPI config
config("lume_base_api_config") {

    # Any target ("public")
    visibility = ["*"]

    # Includes
    include_dirs = [
        "${LUME_BASE_PATH}/api"
    ]

    # Configs applying to this config
    configs = [
        "//third_party/bounds_checking_function:libsec_public_config"
    ]
    
    # C preprocessor defines - #defines
    defines = []
}

#
# Unit tests default config 
#
config("lume_unit_test_config") {

  # All targets in Lume root directory and subdirectories
  visibility = ["${LUME_ROOT}/*"]

  # Includes
  include_dirs = []

  # C preprocessor defines
  defines = [
    "UNIT_TESTS_USE_HCPPTEST",
    "__OHOS_PLATFORM__"
  ]
  
  # Path to find core libs
  if (target_cpu == "arm") {
    defines += [
      "OHOS_PLATFORM_CORE_PATH=\"/system/lib/\"",
      "OHOS_PLATFORM_PLUGINS_PATH=\"/system/lib/graphics3d/\""
    ]
  }

  if (target_cpu == "arm64") {
    defines += [
      "OHOS_PLATFORM_CORE_PATH=\"/system/lib64/\"",
      "OHOS_PLATFORM_PLUGINS_PATH=\"/system/lib64/graphics3d/\""
    ]
  }
  
  # Flags passed to all C/C++ compiler
  cflags = [
    "-Wall",
    "-Wno-unused-function",
    "-Wno-unused-parameter",
    "-Wno-sign-compare",
    "-Wno-unused-variable",
    "-Wno-unused-private-field",
    "-Wno-implicit-fallthrough",
    "-Wno-logical-op-parentheses",
    "-Wno-reorder",
    "-Wno-tautological-unsigned-zero-compare",
    "-Wno-ignored-qualifiers",
    "-Wno-unused-lambda-capture",
    "-Wno-unused-but-set-variable",
    "-Wunknown-escape-sequence",
    "-fno-exceptions",
    "-fno-rtti",
    "-fvisibility=hidden",
  ]

  cflags_cc = [
    "-std=c++17",
  ]
}